fixed resize bug in nav bar. tightened up vertical spacing in homepage after all modules were styled to be responsive

--- a/scss/_home-big-img-module.scss
+++ b/scss/_home-big-img-module.scss
@@ -2,8 +2,12 @@
   @extend .grid;
   @include clearfix;
   padding:0;
+  @include breakpoint($tablet){
+    margin-bottom:$baseline * 3;
+  }
   @include breakpoint($laptop){
     padding: ($baseline) ($baseline * 8);
+    margin-bottom:0;
   }
 
   &__container{
@@ -16,23 +20,29 @@
     background-size: contain;
     height:100px;
     padding-top:100px;
+    margin:0 auto;
     @include breakpoint($mobile){
-      height:120px;
+      height:$baseline * 20;
       padding-top: 120px;
+      max-width: $mobile;
     }
     @include breakpoint(596px){
-      height:224px;
+      height:$baseline * 37;
       padding-top:185px;
+      max-width: 596px;
     }
     @include breakpoint($tablet){
-      height:239px;
+      height:$baseline * 44;
       padding-top:0;
+      max-width: $tablet;
     }
     @include breakpoint($laptop){
-        height:352px;
+        height:$baseline * 62;
+        max-width: $laptop;
     }
     @include breakpoint($big-screen){
-        height:556px;
+        height:$baseline * 93;
+        max-width: $grid-max-width;
     }
 
 
@@ -50,7 +60,7 @@
     }
     @include breakpoint($laptop){
       @include span-columns(7.75 of 18);
-      @include shift(0.25);
+      @include shift(0.5);
       letter-spacing: 1.4px;
     }
 
@@ -63,7 +73,7 @@
       @include breakpoint($tablet){
         font-size:28px;
         line-height: $baseline * 5;
-        padding:($baseline ) 20px ($baseline * 2) 20px;
+        padding:(0 ) 20px ($baseline * 2) 20px;
       }
       @include breakpoint($laptop){
         font-size:34px;
