--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -3,9 +3,40 @@ $nav-logo-height: $nav-height;
 $nav-logo-height-mobile: $nav-height * 0.75;
 $nav-link-hover: transparentize(white, .12);
 
+//pinning styles
+nav.pinned{
+  // transition: all 0.3s ease-in;
+  @include breakpoint($laptop){
+    position:fixed;
+    margin: 0 auto;
+
+    .main-nav{
+      margin:0 auto;
+    }
+  }
+}
+
+div.pinned-nav{
+  // transition: all 0.1s linear;
+  @include breakpoint($laptop){
+    padding-top: $baseline * 18;
+  }
+  @include breakpoint($big-screen){
+    padding-top: $baseline * 20;
+  }
+}
 //small mobile styles
 .nav-bar{
-  margin-bottom: $baseline * 7;
+  width:100%;
+  position:fixed;
+  @include breakpoint($tablet){
+    margin-bottom: $baseline * 4;
+  }
+  @include breakpoint($laptop){
+    position:static;
+    margin-bottom: $baseline * 2;
+  }
+
 }
 .main-nav{
   width:100%;
@@ -17,7 +48,10 @@ $nav-link-hover: transparentize(white, .12);
   margin: 0 auto 0 auto;
   @include breakpoint($laptop){
     width:90%;
-    margin: ($baseline * 4) auto ($baseline * 7) auto;
+    margin: ($baseline * 4) auto ($baseline * 2) auto;
+  }
+  @include breakpoint($big-screen){
+    margin: ($baseline * 4) auto ($baseline * 5) auto;
   }
   &__mobile-dropdown{
     display:flex;
